--- a/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj
+++ b/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="03.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="03_RefPtr.cpp" />
     <ClCompile Include="04_inlineFunc.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -141,6 +142,7 @@
     <ClInclude Include="01.h" />
     <ClInclude Include="02.h" />
     <ClInclude Include="03.h" />
+    <ClInclude Include="03_RefPtr.h" />
     <ClInclude Include="04_inlineFunc.h" />
     <ClInclude Include="05_NameAlias.h" />
     <ClInclude Include="bankSystemMain.h" />
