--- a/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj.filters
+++ b/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="헤더 파일\oopProject">
       <UniqueIdentifier>{1152e982-de56-41df-9303-9e674c1c7906}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\Chapter02">
+      <UniqueIdentifier>{fd2434a9-4f83-45a4-98c7-34bb48b10b10}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더 파일\Chapter02">
+      <UniqueIdentifier>{d1580933-57d9-47b6-af52-84b916112729}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="01.cpp">
@@ -51,6 +57,9 @@
     <ClCompile Include="mainFile.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="03_RefPtr.cpp">
+      <Filter>소스 파일\Chapter02</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01.h">
@@ -76,6 +85,9 @@
     </ClInclude>
     <ClInclude Include="bankSystemMain.h">
       <Filter>헤더 파일\oopProject</Filter>
+    </ClInclude>
+    <ClInclude Include="03_RefPtr.h">
+      <Filter>헤더 파일\Chapter02</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
