#3 Calculator Quiz Resolution

--- a/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj
+++ b/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj
@@ -132,6 +132,8 @@
     <ClCompile Include="04_ReferenceFuncs.cpp" />
     <ClCompile Include="bankSystemMain.cpp" />
     <ClCompile Include="BankSystemVer01.cpp" />
+    <ClCompile Include="Calculator.cpp" />
+    <ClCompile Include="calculatorMain.cpp" />
     <ClCompile Include="carMain.cpp" />
     <ClCompile Include="mainFile.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -141,6 +143,7 @@
     </ClCompile>
     <ClCompile Include="CarInline.cpp" />
     <ClCompile Include="CarInline.h" />
+    <ClCompile Include="Calculator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01.h" />
@@ -152,6 +155,7 @@
     <ClInclude Include="05_NameAlias.h" />
     <ClInclude Include="bankSystemMain.h" />
     <ClInclude Include="BankSystemVer01.h" />
+    <ClInclude Include="calculatorMain.h" />
     <ClInclude Include="carMain.h" />
     <ClInclude Include="mainHeader.h" />
   </ItemGroup>
