--- a/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj
+++ b/熱血プログラミングC++/熱血プログラミングC++/熱血プログラミングC++.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="calculatorMain.cpp" />
     <ClCompile Include="carMain.cpp" />
+    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="FruitSaleSim.cpp" />
     <ClCompile Include="mainFile.cpp" />
     <ClCompile Include="05_NameAlias.cpp">
@@ -143,6 +144,9 @@
     <ClCompile Include="CarInline.cpp" />
     <ClCompile Include="CarInline.h" />
     <ClCompile Include="Calculator.h" />
+    <ClCompile Include="Point.cpp" />
+    <ClCompile Include="Ring.cpp" />
+    <ClCompile Include="RingMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="01.h" />
@@ -156,8 +160,12 @@
     <ClInclude Include="BankSystemVer01.h" />
     <ClInclude Include="calculatorMain.h" />
     <ClInclude Include="carMain.h" />
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="FruitSaleSim.h" />
     <ClInclude Include="mainHeader.h" />
+    <ClInclude Include="Point.h" />
+    <ClInclude Include="Ring.h" />
+    <ClInclude Include="RingMain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
