--- a/熱血プログラミングC++/Fruit/Fruit.vcxproj
+++ b/熱血プログラミングC++/Fruit/Fruit.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{848E3FFC-0AD7-4BBA-9A59-B0B373419F5A}</ProjectGuid>
-    <RootNamespace>熱血プログラミングC</RootNamespace>
+    <ProjectGuid>{5740978B-D0A5-49FA-9D29-D72B228E19A5}</ProjectGuid>
+    <RootNamespace>Fruit</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -29,27 +29,27 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
@@ -78,7 +78,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
   </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
@@ -98,7 +98,6 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -116,46 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="01.cpp" />
-    <ClCompile Include="02.cpp" />
-    <ClCompile Include="03.cpp" />
-    <ClCompile Include="03_RefPtr.cpp" />
-    <ClCompile Include="04_inlineFunc.cpp" />
-    <ClCompile Include="04_ReferenceFuncs.cpp" />
-    <ClCompile Include="05_NameAlias.cpp" />
-    <ClCompile Include="bankSystemMain.cpp" />
-    <ClCompile Include="BankSystemVer01.cpp" />
-    <ClCompile Include="Calculator.cpp" />
-    <ClCompile Include="calculatorMain.cpp" />
-    <ClCompile Include="CarInline.cpp" />
-    <ClCompile Include="carMain.cpp" />
-    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="FruitSaleSim.cpp" />
     <ClCompile Include="mainFile.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="Ring.cpp" />
-    <ClCompile Include="RingMain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="01.h" />
-    <ClInclude Include="02.h" />
-    <ClInclude Include="03.h" />
-    <ClInclude Include="03_RefPtr.h" />
-    <ClInclude Include="04_inlineFunc.h" />
-    <ClInclude Include="04_ReferenceFuncs.h" />
-    <ClInclude Include="05_NameAlias.h" />
-    <ClInclude Include="bankSystemMain.h" />
-    <ClInclude Include="BankSystemVer01.h" />
-    <ClCompile Include="CarInline.h" />
-    <ClCompile Include="Calculator.h" />
-    <ClInclude Include="calculatorMain.h" />
-    <ClInclude Include="carMain.h" />
-    <ClInclude Include="Circle.h" />
     <ClInclude Include="FruitSaleSim.h" />
     <ClInclude Include="mainHeader.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="Ring.h" />
-    <ClInclude Include="RingMain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
