--- a/熱血プログラミングC++/OOP/OOP.vcxproj
+++ b/熱血プログラミングC++/OOP/OOP.vcxproj
@@ -119,7 +119,10 @@
     <ClCompile Include="BankSystemVer01.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="BankSystemVer02.cpp" />
+    <ClCompile Include="BankSystemVer02.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="BankSystemVer03.cpp" />
     <ClCompile Include="mainFile.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -127,7 +130,10 @@
     <ClInclude Include="BankSystemVer01.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="BankSystemVer02.h" />
+    <ClInclude Include="BankSystemVer02.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClInclude>
+    <ClInclude Include="BankSystemVer03.h" />
     <ClInclude Include="mainHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
