--- a/熱血プログラミングC++/OOP/OOP.vcxproj.filters
+++ b/熱血プログラミングC++/OOP/OOP.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="BankSystemVer02.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="BankSystemVer03.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mainHeader.h">
@@ -39,6 +42,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="BankSystemVer02.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BankSystemVer03.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
