--- a/熱血プログラミングC++/OOPProject/OOPProject.vcxproj.filters
+++ b/熱血プログラミングC++/OOPProject/OOPProject.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mainFile.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="bankSystemMain.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -33,11 +30,14 @@
     <ClCompile Include="BankSystemVer04.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="BankSystemVer05.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="mainFile.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="mainHeader.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="bankSystemMain.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
@@ -51,6 +51,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="BankSystemVer04.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BankSystemVer05.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="mainHeader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
